# swagger/swagger.json
@@ -103,6 +103,32 @@
                 }
             }
         },
+        "/colocacion-espacio-academico/{id}": {
+            "delete": {
+                "tags": [
+                    "colocacion-espacio-academico"
+                ],
+                "description": "delete colocacion espacio academico (delete carga plan si tiene)",
+                "operationId": "ColocacionEspacioAcademicoController.deleteGrupoEstudio",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "colocacion espacio academico id",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} delete success!"
+                    },
+                    "404": {
+                        "description": "not found resource"
+                    }
+                }
+            }
+        },
         "/docente/pre-asignacion": {
             "get": {
                 "tags": [
